# block_stacks

./: .gitignore  Cargo.toml  Makefile.toml  README.md
.cargo/: config.toml
common/: Cargo.toml
common/src/: lib.rs
docs/: block_stacks_bg.615be49b.wasm  block_stacks_bg.d4ad01af.wasm  index.56000e16.js  index.de22dc54.js  index.html
game/: Cargo.toml
game/src/: data.rs  lib.rs  palette.rs  util.rs
game/src/blocks/: block.rs  block_kind.rs  block_type.rs  column.rs  cursor.rs  field.rs
game/src/game/: block.rs
game/src/render/: text.rs
game/src/stats/: stat.rs
piston/: Cargo.toml
piston/src/: audio.rs  input.rs  main.rs
web/: Cargo.toml
web/src/: input.rs  lib.rs
