[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = "0.3.61"
strum = "0.24.1"
strum_macros = "0.24.1"
rand = "0.8.5"
rand_distr = "0.4.3"
include_dir = "0.7.3"
getrandom = { version = "0.2", features = ["js"] }
common = { path = "../common" }
game = { path = "../game" }

[dependencies.web-sys]
version = "0.3.61"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]